--- a/index.html
+++ b/index.html
@@ -1,100 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- style -->
-        <link rel="stylesheet" href="style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- style -->
+  <link rel="stylesheet" href="style.css"><!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800&amp;display=swap" rel="stylesheet"><!-- font awesome -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"><!-- Optional theme -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous"><!-- Latest compiled and minified JavaScript -->
 
-        <!-- font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800&display=swap" rel="stylesheet">
-
-        <!-- font awesome -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
-        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
-        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-        crossorigin="anonymous"></script>
-        <title>Document</title>
-    </head>
-
-    <body>
-        <div id="container">
-            <div class="title-back-ground">
-                <div class="box">
-                    <h1 class="title-container">
-                        Unisciti al network Codiceappalti.it
-                    </h1>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+  <title>Document</title>
+</head>
+<body>
+  <div id="container">
+    <div class="title-back-ground">
+      <div class="box">
+        <h1 class="title-container">Unisciti al network Codiceappalti.it</h1>
+      </div>
+    </div>
+    <div class="box">
+      
+      <!-- first card -->
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="panel panel-default">
+              <div class="card-container">
+                <div class="panel-head">
+                  <h5 class="card-name"><b>UTENTE</b></h5>
+                  <h3><b>Registrato</b></h3>
+                  <h4 style="color: #2ecc71;"><b>GRATUITO</b></h4>
                 </div>
-            </div>
-
-            <div class="box">
-                <div class="row">
-                    <div class="col-sm-4">
-                      <div class="card">
-                        <div class="panel panel-default">
-                          <div class="card-container">
-                            <div class="panel-head">
-                                <h5 class="card-name">UTENTE</h5>
-                                <h3>Registrato</h3>
-                                <h4 style="color: #2ecc71;">GRATUITO</h4>
-                            </div>
-                          
-                            <ul>
-                                <li>
-                                    Accesso illimitato a tutte le banche dati giuridiche e newsletter di aggiornamento
-                                </li>
-                            </ul>
-
-                            <div>
-                                <button>Nel dettaglio</button>
-                            </div>
-                        </div>
-                    </div>
+                <ul>
+                  <li>Accesso illimitato a tutte le banche dati giuridiche e newsletter di aggiornamento</li>
+                </ul>
+                <div class="btn-container">
+                  <button class="detail-button">Nel dettaglio</button>
                 </div>
-
-
-
-
-
-
-                    <!-- <div class="col-sm-4">
-                      <div class="card">
-                        <div class="panel panel-default">
-                          <div class="panel-heading">
-                            <h3 class="panel-title">Card 2</h3>
-                          </div>
-                          <div class="panel-body">
-                            Contenuto della card 2
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="card">
-                        <div class="panel panel-default">
-                          <div class="panel-heading">
-                            <h3 class="panel-title">Card 3</h3>
-                          </div>
-                          <div class="panel-body">
-                            Contenuto della card 3
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div> -->
+              </div>
             </div>
+          </div>
         </div>
-    </body>
+
+        <!-- second card -->
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="panel panel-default">
+              <div class="card-container">
+                <div class="panel-head">
+                  <h5 class="card-name"><b>PACCHETTO</b></h5>
+                  <h3><b>Online</b></h3>
+                  <h4><b>€ 1.400</b></h4>
+                </div>
+                <ul>
+                  <li>
+                    Servizi registrate
+                  </li>
+                  <li>
+                    Accesso a tutti i corsi di formazione durante il periodo dell'abbonamento (compreso di materiale e chat)
+                  </li>
+                  <li>
+                    Accesso al bando di gara tipo
+                  </li>
+                </ul>
+                <div class="btn-container">
+                  <button class="detail-button">Nel dettaglio</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- third card -->
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="panel panel-default">
+              <div class="card-container">
+                <div class="panel-head">
+                  <h5 class="card-name"><b>PACCHETTO</b></h5>
+                  <h3><b>Live</b></h3>
+                  <h5><b>CONTATTACI <br> SENZA IMPEGNO</b></h5>
+                </div>
+                <ul>
+                  <li>
+                    Servizi pacchetto online 
+                  </li>
+                  <li>
+                    Accesso illimitato alla consulenza giuridica 
+                  </li>
+                  <li>
+                    Personalizzazione del bando tipo 
+                  </li>
+                  <li>
+                    Accesso alla Diretta streaming
+                  </li>
+                </ul>
+                <div class="btn-container">
+                  <button class="detail-button">Nel dettaglio</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
